# GLEngine

./: .gitignore  CMakeLists.txt  README.md
CMake/: FindAssimp.cmake  FindEigen.cmake  FindSOFA.cmake  FindSixenseSDK.cmake
GLEngine/: CMakeLists.txt  config.h  main.cpp
GLEngine/loaders/: AssimpLoader.cpp  AssimpLoader.h  MeshLoader.cpp  MeshLoader.h
GLEngine/resources/: Library.cpp  Library.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
GLEngine/scene/: Camera.cpp  Camera.h  Light.cpp  Light.h  Node.cpp  Node.h
GLEngine/shaders/: fwRendering.v0.frag  fwRendering.v1.frag  postProcessing.v0.frag  postProcessing.v0.vert  postProcessing.v1.frag  shader.v1.vert  shader.v2.frag  shader.v2.vert  shader.v3.vert  shader.v4.frag  shader.v5.frag  shader.v5.vert  shader.v6.vert  shader.v7.frag  shader.v7.vert  shader.v8.frag  shader.v8.vert
